[package]
name = "refthing"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "*", features = ["persistence"] }
egui_extras = { version = "*", features = ["all_loaders"] }
image = {version = "*", features = ["default-formats"]}
env_logger = "*"
copypasta = "*"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
log = "*"

