[package]
name = "refthing"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { git = "https://github.com/bircni/egui/", branch="patch05", features = ["persistence"] }
egui_extras = { git = "https://github.com/bircni/egui/", branch="patch05", features = ["all_loaders"] }
image = {version = "*", features = ["default-formats"]}
env_logger = "*"
copypasta = "*"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
log = "*"

